--- a/MyApplication/app/src/main/res/layout/act_recycler.xml
+++ b/MyApplication/app/src/main/res/layout/act_recycler.xml
@@ -2,33 +2,41 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="#f6f6f6"/>
+        android:background="#f6f6f6" />
+
     <com.example.gaofei.myapplication.act.view.swipetoloadlayout.SwipeToLoadLayout
+        android:id="@+id/swipe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1">
+
         <com.example.gaofei.myapplication.act.view.swipetoloadlayout.SwipeRefreshHeaderLayout
             android:id="@+id/swipe_refresh_header"
             android:layout_width="match_parent"
-            android:layout_height="80dp"/>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/swipe_target"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+            android:layout_height="80dp" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/swipe_target"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#e6e6e6"/>
+
         <com.example.gaofei.myapplication.act.view.swipetoloadlayout.SwipeLoadMoreFooterLayout
             android:id="@+id/swipe_load_more_footer"
             android:layout_width="match_parent"
-            android:layout_height="80dp"/>
+            android:layout_height="80dp" />
     </com.example.gaofei.myapplication.act.view.swipetoloadlayout.SwipeToLoadLayout>
+
     <Button
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:text="点击"/>
+        android:text="点击" />
 </LinearLayout>
