--- a/MyApplication/app/src/main/res/layout/recycler_view_item_main.xml
+++ b/MyApplication/app/src/main/res/layout/recycler_view_item_main.xml
@@ -20,6 +20,6 @@
         android:layout_marginRight="10dp"
         android:textColor="#000000"
         android:textSize="16sp"
-        android:layout_alignParentRight="true"
-        android:text="ddddd"/>
+        android:textAllCaps="false"
+        android:layout_alignParentRight="true"/>
 </RelativeLayout>
