--- a/MyApplication/app/src/main/res/layout/activity_webview.xml
+++ b/MyApplication/app/src/main/res/layout/activity_webview.xml
@@ -1,13 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <com.tencent.smtt.sdk.WebView
-        android:id="@+id/webview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_world" />
-
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
@@ -35,5 +28,36 @@
 
     </LinearLayout>
 
+    <com.tencent.smtt.sdk.WebView
+        android:id="@+id/webview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#00000000"
+        android:text="@string/hello_world" />
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="#00000000"
+        android:layout_alignParentBottom="true"
+        android:gravity="bottom" >
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:layout_marginLeft="38dp"
+        android:gravity="left"
+        android:background="@null"
+        android:text="@string/send_message" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="38dp"
+        android:layout_gravity="right"
+        android:gravity="right"
+        android:text="@string/call_handler" />
+
+    </LinearLayout>
 </RelativeLayout>
