--- a/MyApplication/app/src/main/res/layout/act_layout.xml
+++ b/MyApplication/app/src/main/res/layout/act_layout.xml
@@ -1,14 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.gaofei.myapplication.widget.MyRelativelayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+<com.example.gaofei.myapplication.widget.MyLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:paddingBottom="10dp"
     android:background="#ff3333">
 
-    <android.support.v4.view.ViewPager
+
+    <com.example.gaofei.myapplication.widget.MyTextView
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#ff6666"/>
+        android:textColor="#ffffff"/>
+<RelativeLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:background="#ffffff">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#ff6666"/>
+    </RelativeLayout>
+</RelativeLayout>
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_gravity="bottom"
+        android:text="test"/>
 
-</com.example.gaofei.myapplication.widget.MyRelativelayout>
+</com.example.gaofei.myapplication.widget.MyLinearLayout>
