--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,21 @@
     tools:layout_editor_absoluteY="81dp">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/a"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="test"
+        app1:layout_constraintEnd_toEndOf="@+id/root"
+        tools:layout_editor_absoluteX="308dp"
+        tools:layout_editor_absoluteY="0dp" />
+
+    <TextView
+        android:id="@+id/a"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="test1"
         app1:layout_constraintEnd_toEndOf="@+id/root"
         tools:layout_editor_absoluteX="308dp"
         tools:layout_editor_absoluteY="0dp" />
