--- a/MyApplication/app/src/main/res/values/styles.xml
+++ b/MyApplication/app/src/main/res/values/styles.xml
@@ -12,6 +12,17 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+    <!-- 通用按钮样式-->
+    <style name="base_button_style" parent="Base.Widget.AppCompat.Button.Borderless">
+        <item name="android:layout_width">200dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 
+    <style name="button_white_style2" parent="base_button_style">
+        <item name="android:background">@drawable/sl_round_rect_white2</item>
+        <item name="android:textColor">@color/yc_blue5</item>
+    </style>
 
 </resources>
