--- a/MyApplication/app/src/main/res/layout/act_screen_shot.xml
+++ b/MyApplication/app/src/main/res/layout/act_screen_shot.xml
@@ -1,24 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/text1"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:background="#ff6666"/>
-    <TextView
-        android:id="@+id/text2"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:background="#cc6666"/>
-    <TextView
-        android:id="@+id/text3"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:background="#aa6666"/>
-    <TextView
-        android:id="@+id/text4"
-        android:layout_width="200dp"
-        android:layout_height="40dp" />
-</LinearLayout>
+<layout>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/text1"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:background="#ff6666" />
+    </LinearLayout>
+</layout>
