--- a/MyApplication/app/src/main/res/layout/act_exception.xml
+++ b/MyApplication/app/src/main/res/layout/act_exception.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="wrap_content"
-    android:background="#ffcccc"
     android:layout_height="wrap_content">
-    <com.example.gaofei.app.widget.MyView
+    <Button
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#FF6666"/>
+        android:gravity="center"
+        android:text="exception"/>
 </RelativeLayout>
