--- a/MyApplication/app/src/main/res/layout/act_reflect.xml
+++ b/MyApplication/app/src/main/res/layout/act_reflect.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,7 +12,10 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:textSize="14sp"
-            android:textColor="#fff666"/>
+            android:textColor="#000000"
+            android:lineSpacingMultiplier="1.4"
+            android:fadeScrollbars="false"
+            android:scrollbars="vertical"/>
 
         <Button
             android:id="@+id/start"
