测试NestedScrollView和webview问题

--- a/MyApplication/app/src/main/res/layout/act_test.xml
+++ b/MyApplication/app/src/main/res/layout/act_test.xml
@@ -2,286 +2,36 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <FrameLayout
+
+    <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <FrameLayout
-            android:id="@+id/user_profile"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <FrameLayout
+            <View
+                android:id="@+id/ll2"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="300dp"
+                android:background="@color/yc_red4" />
 
-                <android.support.v4.widget.NestedScrollView
-                    android:id="@+id/scrollView"
+
+                <WebView
+                    android:id="@+id/fl2"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="500dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:background="@color/yc_blue5" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <RelativeLayout
-                            android:id="@+id/scrollViewRL"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginTop="36dp"
-                            android:animateLayoutChanges="true">
-
-                            <ImageView
-                                android:id="@+id/img"
-                                android:layout_width="90dp"
-                                android:layout_height="90dp"
-                                android:layout_centerHorizontal="true"
-                                android:scaleType="centerCrop" />
-
-                            <TextView
-                                android:id="@+id/level"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignTop="@+id/img"
-                                android:layout_marginLeft="-2dp"
-                                android:layout_marginTop="-2dp"
-                                android:layout_toRightOf="@+id/img"
-                                android:gravity="center"
-                                android:paddingLeft="5dp"
-                                android:paddingRight="5dp"
-                                android:text="Lv 12"
-                                android:textColor="@color/white"
-                                android:textSize="12dp" />
-
-                            <TextView
-                                android:id="@+id/name"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/img"
-                                android:layout_centerHorizontal="true"
-                                android:layout_marginTop="12dp"
-                                android:text="高飞"
-                                android:textColor="@color/yc_gray7"
-                                android:textSize="18dp" />
-
-                            <ImageView
-                                android:id="@+id/vip_icon"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignTop="@+id/name"
-                                android:layout_marginLeft="2dp"
-                                android:layout_toRightOf="@+id/name" />
-
-                            <TextView
-                                android:id="@+id/tag_wrapper"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/name"
-                                android:layout_centerHorizontal="true"
-                                android:layout_marginBottom="4dp"
-                                android:layout_marginTop="8dp"
-                                android:visibility="gone" />
-
-                            <TextView
-                                android:id="@+id/school"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/tag_wrapper"
-                                android:layout_centerHorizontal="true"
-                                android:layout_marginTop="8dp"
-                                android:text="一中"
-                                android:textColor="@color/yc_gray5"
-                                android:textSize="14dp" />
-
-                            <LinearLayout
-                                android:id="@+id/ll"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/school"
-                                android:layout_marginLeft="16dp"
-                                android:layout_marginRight="16dp"
-                                android:layout_marginTop="20dp"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center_vertical"
-                                    android:gravity="center"
-                                    android:text="天梯段位"
-                                    android:textColor="@color/yc_gray7"
-                                    android:textSize="16dp" />
-
-                                <View
-                                    android:layout_width="match_parent"
-                                    android:layout_height="1px"
-                                    android:layout_gravity="center_vertical"
-                                    android:layout_marginLeft="4dp"
-                                    android:background="#e8e8e8" />
-
-                            </LinearLayout>
-
-                            <FrameLayout
-                                android:id="@+id/fl"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/ll"
-                                android:layout_marginLeft="16dp"
-                                android:layout_marginRight="16dp"
-                                android:layout_marginTop="20dp">
-
-                                <ImageView
-                                    android:id="@+id/ladder_icon"
-                                    android:layout_width="48dp"
-                                    android:layout_height="48dp" />
-
-                                <LinearLayout
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center_vertical"
-                                    android:layout_marginLeft="60dp"
-                                    android:orientation="vertical">
-
-                                    <TextView
-                                        android:id="@+id/ladder_name"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_gravity="center_horizontal"
-                                        android:gravity="center"
-                                        android:text="黄金 III"
-                                        android:textColor="@color/yc_gray7"
-                                        android:textSize="14dp" />
-
-                                    <TextView
-                                        android:id="@+id/ladder_star"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_gravity="center_horizontal"
-                                        android:layout_marginTop="8dp"
-                                        android:gravity="center"
-                                        android:text="274"
-                                        android:textColor="@color/yc_gray5"
-                                        android:textSize="12dp" />
-
-                                </LinearLayout>
-
-                                <TextView
-                                    android:id="@+id/ladder_season"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="right|center_vertical"
-                                    android:text="第一赛季"
-                                    android:textColor="@color/yc_gray5"
-                                    android:textSize="12dp" />
-                            </FrameLayout>
-
-                            <LinearLayout
-                                android:id="@+id/ll2"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/fl"
-                                android:layout_marginLeft="16dp"
-                                android:layout_marginRight="16dp"
-                                android:layout_marginTop="20dp"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:id="@+id/dress_title"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center_vertical"
-                                    android:gravity="center"
-                                    android:text="TA的形象"
-                                    android:textColor="@color/yc_gray7"
-                                    android:textSize="16dp" />
-
-                                <View
-                                    android:layout_width="match_parent"
-                                    android:layout_height="1px"
-                                    android:layout_gravity="center_vertical"
-                                    android:layout_marginLeft="4dp"
-                                    android:background="#e8e8e8" />
-
-                            </LinearLayout>
-
-                            <WebView
-                                android:id="@+id/fl2"
-                                android:layout_width="match_parent"
-                                android:layout_height="400dp"
-                                android:layout_below="@+id/ll2"
-                                android:layout_marginLeft="16dp"
-                                android:layout_marginRight="16dp"
-                                android:background="@color/yc_blue5" />
-
-
-                            <View
-                                android:id="@+id/empty"
-                                android:layout_width="match_parent"
-                                android:layout_height="48dp"
-                                android:layout_below="@+id/fl2"
-                                android:background="@color/transparent" />
-                        </RelativeLayout>
-                    </LinearLayout>
-                </android.support.v4.widget.NestedScrollView>
-
-                <LinearLayout
-                    android:id="@+id/toolbarWrapper"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:orientation="vertical">
-
-                    <android.support.v7.widget.Toolbar
-                        android:id="@+id/toolbar"
-                        android:layout_width="match_parent"
-                        android:layout_height="56dp"
-                        android:background="@color/transparent" />
-
-                    <ImageView
-                        android:id="@+id/shadow"
-                        android:layout_width="match_parent"
-                        android:layout_height="10dp"
-                        android:scaleType="centerCrop"
-                        android:visibility="gone" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/friend_request_wrapper"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:scaleType="centerCrop" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/white"
-                        android:gravity="center"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:id="@+id/friend_request_icon"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginRight="5dp" />
-
-                        <TextView
-                            android:id="@+id/friend_request"
-                            android:layout_width="wrap_content"
-                            android:layout_height="48dp"
-                            android:gravity="center"
-                            android:text="加好友"
-                            android:textColor="@color/yc_blue5"
-                            android:textSize="16sp" />
-                    </LinearLayout>
-                </LinearLayout>
-            </FrameLayout>
-        </FrameLayout>
-    </FrameLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@color/yc_gray5"/>
+        </LinearLayout>
+    </ScrollView>
 </layout>
