--- a/MyApplication/app/src/main/res/layout/act_touch_event.xml
+++ b/MyApplication/app/src/main/res/layout/act_touch_event.xml
@@ -11,37 +11,45 @@
             android:id="@+id/ll1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingTop="20dp"
+            android:layout_marginTop="20dp"
             android:orientation="vertical">
 
-            <com.gaofei.app.widget.MyView
+            <TextView
                 android:id="@+id/view1"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:background="@color/yc_red1" />
+                android:background="@color/yc_red1"
+                android:text="view1"/>
 
-            <View
+            <TextView
                 android:id="@+id/view2"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:background="@color/yc_red2" />
+                android:background="@color/yc_red2"
+                android:text="view2"/>
         </com.gaofei.app.widget.MyLinearLayout>
 
         <com.gaofei.app.widget.MyLinearLayout
             android:id="@+id/ll2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:orientation="vertical">
 
-            <View
+            <TextView
                 android:id="@+id/view3"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:background="@color/yc_red3" />
+                android:background="@color/yc_red3"
+                android:text="view3"/>
 
-            <View
+            <TextView
                 android:id="@+id/view4"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:background="@color/yc_red4" />
+                android:background="@color/yc_red4"
+                android:text="view4"/>
         </com.gaofei.app.widget.MyLinearLayout>
     </com.gaofei.app.widget.MyFrameLayout>
 
