--- a/MyApplication/app/src/main/res/layout/fra_my_fragment.xml
+++ b/MyApplication/app/src/main/res/layout/fra_my_fragment.xml
@@ -5,14 +5,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
+        <TextView
+            android:id="@+id/text"
             android:layout_width="match_parent"
-            android:layout_height="200dp">
-            <android.support.v4.view.PagerTabStrip
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </android.support.v4.view.ViewPager>
+            android:layout_height="match_parent"
+            android:text="fragment"/>
     </LinearLayout>
 </layout>
