--- a/MyApplication/app/src/main/res/layout/act_test.xml
+++ b/MyApplication/app/src/main/res/layout/act_test.xml
@@ -37,6 +37,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/image2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:scaleType="centerCrop"
