--- a/MyApplication/app/src/main/res/layout/act_edit_text.xml
+++ b/MyApplication/app/src/main/res/layout/act_edit_text.xml
@@ -23,6 +23,21 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:text="button2" />
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:text="button3" />
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:text="button4" />
+
         </LinearLayout>
 
         <EditText
@@ -30,5 +45,20 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_alignParentBottom="true" />
+
+
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@color/yc_red1"
+            android:layout_above="@+id/edit"/>
+
+        <EditText
+            android:id="@+id/edit2"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@color/yc_red2"
+            android:layout_above="@+id/text"/>
     </RelativeLayout>
 </layout>
