--- a/MyApplication/app/src/main/res/layout/act_view_pager.xml
+++ b/MyApplication/app/src/main/res/layout/act_view_pager.xml
@@ -2,17 +2,21 @@
 <layout>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <com.gaofei.library.widget.tab.CustomTabLayout
+            android:id="@+id/tab"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            app:tabIndicatorColor="@color/yc_blue5"
+            app:tabIndicatorHeight="3dp"/>
+
         <android.support.v4.view.ViewPager
             android:id="@+id/pager"
             android:layout_width="match_parent"
-            android:layout_height="200dp">
-            <android.support.v4.view.PagerTabStrip
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </android.support.v4.view.ViewPager>
+            android:layout_height="200dp"></android.support.v4.view.ViewPager>
     </LinearLayout>
 </layout>
